k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: chat-ingress 
  namespace: pvs-teko6
  annotations:
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - kumi.teko.hackerman.ch 
      secretName: kumi.teko.hackerman.ch-tls 
  rules:
    - host: kumi.teko.hackerman.ch 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: chat-service
                port:
                  name: http
